div#timeline-embed to main#timeline-embed[role=main]

--- a/website/templates/examples/_common_example_embed.html
+++ b/website/templates/examples/_common_example_embed.html
@@ -1,7 +1,7 @@
   <!-- Demo -->
-  <div id="timeline-embed">
+  <main role="main" id="timeline-embed">
     <div id="timeline"></div>
-  </div>
+  </main>
   <!-- build:css //cdn.knightlab.com/libs/timeline3/%(cdn)s/css/timeline.css -->
   <link rel="stylesheet" href="/build/css/fonts/font.knightlab.css">
   <!-- endbuild -->
