div.tl-timemarker-content-container to button.tl-timemarker-content-container
- Using <button> over just a tabindex attribute since <button> selects
on enter.
- Added a rule to fix styling

--- a/source/less/timenav/TL.TimeMarker.less
+++ b/source/less/timenav/TL.TimeMarker.less
@@ -116,6 +116,9 @@
 	
 	/* Content
 	================================================== */
+	button.tl-timemarker-content-container {
+		padding: 0;
+	}
 	.tl-timemarker-content-container {
 		position:absolute;
 		background-color: @marker-color;
